# staticqueue

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: gtest.cmake
src/: CMakeLists.txt  queue.c  queue.h  types.h
test/: CMakeLists.txt  queue.cpp
